list recipes doesnt error
